--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,6 +1,9 @@
 name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
 
-on: push
+on:
+  push:
+    branches: [ "root" ]
+    
 jobs:
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
@@ -12,9 +15,11 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install dependencies
+      working-directory: ./python
       run: >-
         python -m pip install -r requirements.txt --user
     - name: Build a binary wheel and a source tarball
+      working-directory: ./python
       run: >-
         python -m setup.py sdist bdist_wheel
     - name: Publish TEST package
