--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,10 +18,10 @@ jobs:
       working-directory: ./python
       run: >-
         python -m pip install -r requirements.txt --user
-    - name: Build a binary wheel and a source tarball
+        python -m pip install build
+    - name: Build package
       working-directory: ./python
-      run: >-
-        python -m setup.py sdist bdist_wheel
+      run: python -m build
     - name: Publish TEST package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
