Update publish action

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,14 +14,34 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
-      - name: Install dependencies
+      # - name: Install dependencies
+      #   working-directory: ./python
+      #   run: |
+      #     python -m pip install -r requirements.txt --user
+      #     python -m pip install build
+      - name: Install build tools
         working-directory: ./python
         run: |
           python -m pip install -r requirements.txt --user
-          python -m pip install build
+          python -m pip install setuptools wheel twine
       - name: Build package
         working-directory: ./python
-        run: python -m build
+        run: |
+          python setup.py sdist bdist_wheel
+      - name: Publish Packages
+        working-directory: ./python
+        env:
+          TWINE_USERNAME: mastoltejr
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_PASSWORD }}
+        run: |
+          twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+      - name: Publish Packages
+        working-directory: ./python
+        env:
+          TWINE_USERNAME: mastoltejr
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          twine upload dist/*
       # - name: Publish TEST package
       #   uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       #   with:
@@ -29,9 +49,9 @@ jobs:
       #     password: ${{ secrets.TEST_PYPI_TOKEN }}
       #     repository_url: https://test.pypi.org/legacy/
       #     packages_dir: ./python/dist
-      - name: Publish PROD package
-        uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-        with:
-          user: mastoltejr
-          password: ${{ secrets.PYPI_TOKEN }}
-          packages_dir: ./python/dist
+      # - name: Publish PROD package
+      #   uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      #   with:
+      #     user: mastoltejr
+      #     password: ${{ secrets.PYPI_TOKEN }}
+      #     packages_dir: ./python/dist
